// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<ConfirmModal
  confirmButtonText="delete"
  confirmData="1"
  header="settings.pr_decoration.delete.header"
  isDestructive={true}
  onClose={[MockFunction]}
  onConfirm={[MockFunction]}
>
  <p
    className="spacer-bottom"
  >
    <FormattedMessage
      defaultMessage="settings.pr_decoration.delete.message"
      id="settings.pr_decoration.delete.message"
      values={
        Object {
          "id": <b>
            1
          </b>,
        }
      }
    />
  </p>
  <p>
    settings.pr_decoration.delete.info.4
     
  </p>
</ConfirmModal>
`;

exports[`should render correctly 2`] = `
<ConfirmModal
  confirmButtonText="delete"
  confirmData="1"
  header="settings.pr_decoration.delete.header"
  isDestructive={true}
  onClose={[MockFunction]}
  onConfirm={[MockFunction]}
>
  <p
    className="spacer-bottom"
  >
    <FormattedMessage
      defaultMessage="settings.pr_decoration.delete.message"
      id="settings.pr_decoration.delete.message"
      values={
        Object {
          "id": <b>
            1
          </b>,
        }
      }
    />
  </p>
  <p>
    settings.pr_decoration.delete.no_info
  </p>
</ConfirmModal>
`;
